# reinforce-lab-takehome

./: .gitignore  PLAN.md  README.md  pyproject.toml
config/: source_weights.json
src/: __init__.py  main.py  web.py
src/agent/: __init__.py  claim_builder.py  claim_cluster.py  config.py  contradiction.py  extractor.py  fetcher.py  mermaid.py  metrics.py  orchestrator.py  planner.py  prompts.py  report.py  resolver.py  schemas.py  search_providers.py  search_tool.py  utils.py  webapp.py  weights.py
src/agent/web/: app.js  index.html  styles.css
tests/: test_clustering.py  test_contradiction.py  test_mermaid.py  test_orchestrator_metadata.py  test_resolution.py  test_schemas.py  test_search_providers.py  test_smoke_end_to_end.py  test_verification.py  test_webapp_api.py  test_weights.py
